<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bacground"
    android:gravity="center"
    android:onClick="mainActivityButton1Click"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/mainActivityTitle"
                android:textColor="@color/white"
                android:textSize="36sp" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="40dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/btn"
                android:gravity="center"
                android:onClick="mainActivityButton1Click"
                android:padding="5dp"
                android:text="@string/mainActivityBTN1"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/btn"
                android:gravity="center"
                android:onClick="mainActivityButton2Click"
                android:padding="5dp"
                android:text="@string/mainActivityBTN2"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/btn"
                android:gravity="center"
                android:onClick="mainActivityButton3Click"
                android:padding="5dp"
                android:text="@string/mainActivityBTN3"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/btn"
                android:gravity="center"
                android:onClick="mainActivityButton4Click"
                android:padding="5dp"
                android:text="@string/mainActivityBTN4"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:layout_margin="5dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn"
                android:gravity="center"
                android:onClick="mainActivityButton5Click"
                android:padding="5dp"
                android:text="@string/mainActivityBTN5"
                android:textColor="@color/black"
                android:textSize="15dp" />
        </LinearLayout>
    </ScrollView>


</RelativeLayout>