<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JokesActivity"
    android:background="@color/bacground">

    <ScrollView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linerlayout"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="***"
                android:textColor="@color/white"
                android:textSize="30sp"/>
            <TextView
                android:id="@+id/textLokes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:textColor="@color/white"
                android:text="text"
                android:textSize="20sp"
                android:gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="***"
                android:textColor="@color/white"
                android:textSize="30sp"/>
        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:id="@+id/linerlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/backBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/btn_green"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/lokesActivityBTN1"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/nextBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:background="@drawable/btn_green"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/lokesActivityBTN2"
                android:textColor="@color/black"
                android:textSize="15dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/exitBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_red"
            android:gravity="center"
            android:onClick="jokesActivityButton3Click"
            android:padding="5dp"
            android:text="@string/lokesActivityBTN3"
            android:textColor="@color/black"
            android:textSize="15dp" />
    </LinearLayout>


</RelativeLayout>